--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Veterinaria PetCarees - Servicios</title>
+  <title>Veterinaria PetCare - Servicios</title>
   <style>
     body {
       font-family: Arial, sans-serif;
